# strobo

hw/pcb/strobo/: bom.csv  leds.sch  strobo.kicad_pcb  strobo.lib  strobo.net  strobo.pro  strobo.sch
hw/pcb/strobo/strobo.pretty/: LED_Ring.kicad_mod
sw-rust/stroborust/: .gitignore  Cargo.toml  README.md  flash.gdb  flash_run.sh  memory.x
sw-rust/stroborust/.cargo/: config
sw-rust/stroborust/src/: board.rs  charlieplexing.rs  led_ring.rs  main.rs
