[package]
authors = ["Jonas <osannolik@godtycklig.se>"]
edition = "2018"
readme = "README.md"
name = "stroborust"
version = "0.1.0"
categories = ["embedded", "no-std"]
description = "Software for the strobodisc board"
keywords = ["arm", "cortex-m"]

[dependencies]
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"

[dependencies.rtfm]
package = "cortex-m-rtfm"
version = "0.4.3"
#features = ["timer-queue"] # thumbv6m :(

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.

[dependencies.stm32l0]
version = "0.8.0"
features = ["stm32l0x1", "rt"]

[dependencies.stm32l0xx-hal]
version = "0.3.1"
features = ["stm32l0x1", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "stroborust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
