[package]
authors = ["Jonas <osannolik@godtycklig.se>"]
edition = "2018"
readme = "README.md"
name = "stroborust"
version = "0.1.0"
categories = ["embedded", "no-std"]
description = "Software for the strobodisc board"
keywords = ["arm", "cortex-m"]

[dependencies]
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"
nb = "0.1.2"
charlieplexing = { git = "https://github.com/osannolik/charlieplexing-rs" }

[dependencies.num]
version = "0.2"
default-features = false

[dependencies.rtfm]
package = "cortex-m-rtfm"
version = "0.5.0-beta.1"

[patch.crates-io]
embedded-hal = { git = "https://github.com/osannolik/embedded-hal", branch = "tristate", features = ["unproven"] }
stm32l0xx-hal = { git = "https://github.com/osannolik/stm32l0xx-hal", branch = "tristate", features = ["unproven"] }

[dependencies.stm32l0]
version = "0.8.0"
features = ["stm32l0x1", "rt"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32l0xx-hal]
version = "0.4.0"
features = ["stm32l0x1", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "stroborust"
test = false
bench = false

[profile.dev]
incremental = false
opt-level = 0
lto = true
codegen-units = 1
debug = true

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
debug = true
